# recon-stream

./: .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
docs/: architecture.mermaid
src/: conftest.py
src/config/: celery.py  settings.py  urls.py  wsgi.py
src/core/: health.py  logging.py  models.py
src/core/middleware/: idempotency.py  request_id.py
src/core/migrations/: 0001_pg_trgm.py
src/reconciliation/: api.py  managers.py  models.py  schemas.py  tasks.py
src/reconciliation/migrations/: 0001_initial.py
src/reconciliation/services/: ingestion.py  matcher.py
src/reconciliation/tests/: factories.py  test_concurrency.py  test_factories.py  test_idempotency.py  test_ingestion.py  test_matching.py  test_properties.py  test_query_count.py
src/scripts/: seed_data.py
